--- a/app/views/datos/_form.html.erb
+++ b/app/views/datos/_form.html.erb
@@ -21,7 +21,7 @@
   </div>
   <div class="field">
     <%= f.label :unidades %><br />
-    <%= f.select :unidades, :Pulgadas=>"Pulgadas"%> 
+    <%= f.select :unidades, :Pulgadas=>"Pulgadas", :Centimetros=>"Centimetros"%> 
   </div>
   <div class="actions">
     <%= f.submit %>
