--- a/app/views/datos/index.html.erb
+++ b/app/views/datos/index.html.erb
@@ -5,6 +5,8 @@
     <th>Genero</th>
     <th>Estatura</th>
     <th>Unidades</th>
+    <th>Peso Ideal (lb)</th>
+    <th>Peso Ideal (kg)</th>
     <th>BMI</th>
     <th></th>
     <th></th>
@@ -17,7 +19,13 @@
     <td><%= dato.estatura %></td>
     <td><%= dato.unidades %></td>
     <% base = dato.genero == "F" ? 101 : 110 %>
-    <td><%= base +5.06*(dato.estatura-60) %></td>
+    <% estaturaTemp = dato.unidades == "Pulgadas" ? dato.estatura : (dato.estatura*0.3937007) %>
+    <% pesoBase = base + 5.06*(estaturaTemp-60) %>
+    <% pesoKilogramos = pesoBase*0.453592 %>
+    <% bmiTemp = (703*pesoBase)/(estaturaTemp**2) %>
+    <td><%= pesoBase  %></td>
+    <td><%= pesoKilogramos  %></td>
+    <td><%= bmiTemp %></td>
     <td><%= link_to 'Show', dato %></td>
     <td><%= link_to 'Edit', edit_dato_path(dato) %></td>
     <td><%= link_to 'Destroy', dato, method: :delete, data: { confirm: 'Are you sure?' } %></td>
